Updated tests to use getFirst()